# bachelor-source-code

./: CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  experiments.cpp  experiments.h  graphs.cpp  graphs.h  main.cpp  utils.cpp  utils.h
benchmarks/: benchmark-1654281933.csv  benchmark-1654285930.csv  benchmark-1654292006.csv  benchmark-1654333696.csv  benchmark-1654345417.csv  benchmark-1654346794.csv  benchmark-1654350404.csv  benchmark-1654353690.csv  benchmark-1654430591.csv  benchmark-1654432892.csv  benchmark-1654435330.csv  benchmark-1654440190-duplicate-30.csv  benchmark-1654457032.csv  benchmark-1654465504.csv  benchmark-1654466225.csv  benchmark-1654466314.csv  benchmark-1654467594.csv  benchmark-1654468269.csv  benchmark-1654469105.csv  benchmark-1654469491.csv  benchmark-1654469625.csv  benchmark-1654470708.csv  benchmark-1654503853.csv  benchmark-1654511315.csv  benchmark-1654532242.csv  benchmark-1654544058.csv  benchmark-1654672786.csv  benchmark-1654672913.csv  benchmark-1654673141.csv  benchmark-1654684254.csv  benchmark-1654684408.csv  benchmark-1654783660.csv  benchmark-1654785587.csv  benchmark-1654792531.csv  benchmark-1654853523.csv  benchmark-1654890122.csv  benchmark-1654890300.csv  benchmark-1654891177.csv  benchmark-1654891981.csv  benchmark-1654892049.csv  (+8 more)
